# antixt

./: .gitignore  AGENTS.md  LICENSE  README.md  RESEARCH.md
.github/workflows/: ci.yml
antixt/: Cargo.toml  README.md
antixt/src/: codegen.rs  css.rs  dev.rs  html.rs  lib.rs  main.rs  model.rs  project.rs  server.rs  tooling.rs
benchmark/: README.md  antixt-rust-results.json  antixt-rust-v02-results.json  antixt-rust.mjs  antixt-scale-results.json  antixt-scale.mjs  antixt-storefront-results.json  antixt-storefront.mjs  antixt-v01-results.json  framework-results.json  results.json  tooling-results.json
docs/: .gitignore  Cargo.toml  README.md
docs/app/: config.rs  layout.rs  page.rs
docs/app/benchmarks/: page.rs
docs/app/docs/: page.rs
docs/app/docs/[slug]/: page.rs
docs/client/: docs-search.js
docs/components/: docs.rs  mod.rs  state.rs  theme.rs
