[package]
name = "antixt"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "The dependency-free, server-first Rust web framework after Next"
repository = "https://github.com/Sam-Sutherland/antixt"
readme = "README.md"
keywords = ["web", "framework", "server", "html"]
categories = ["web-programming", "command-line-utilities"]

[lib]
name = "antixt"
path = "src/lib.rs"

[[bin]]
name = "antixt"
path = "src/main.rs"

[dependencies]
